Revert to December 18, 2025 state
Co-authored-by: lanmata <69470188+lanmata@users.noreply.github.com>